--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <h1>Welcome to the Home Page</h1>
-</body>
-</html>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod soluta rerum atque nisi harum iure alias aut deleniti praesentium itaque non dolorem, sapiente vitae repellendus porro vel dolorum assumenda voluptates! Ducimus quasi impedit eaque exercitationem soluta sunt, dolorem nesciunt veritatis blanditiis nostrum? Ullam quod ad repellat doloremque libero dolore ratione perferendis voluptatum soluta vitae dignissimos asperiores, cupiditate non praesentium architecto suscipit! Esse id cupiditate error totam quidem corrupti, illum amet, temporibus repudiandae nesciunt nostrum possimus animi eos. Debitis quam possimus neque aliquam dolore, in laboriosam sint sapiente at ab, aperiam omnis mollitia culpa nulla cum perspiciatis nostrum excepturi error quae!</p>
+{% endblock %}
