--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMS</title>
     <style>
-        h1{background-color:yellow}
+        h1{text-decoration: underline red dashed;}
     </style>
 </head>
 <body>
