added redirect on form submission

--- a/admission/templates/admission_details.html
+++ b/admission/templates/admission_details.html
@@ -2,13 +2,18 @@
 {% load static %}
 {% block content %}
 <h1>Admission Details</h1>
+<table border="1" cellspacing="0">
+<tr><th>Sl No</th><th>Name</th><th>Course</th><th>Phone Number</th><th>Fee Paid</th></tr>
 {% for stud in students %}
-    <h3>Serial No: {{ stud.slno }}</h3>
-    <h3>Name: {{ stud.name }}</h3>
-    <h3>Course: {{ stud.course }}</h3>
-    <h3>Phone Number: {{ stud.phonenum }}</h3>
-    <h3>Fee Paid: {{ stud.feepaid }}</h3>
-    <hr>
+<tr>
+    <td>{{ stud.slno }}</td>
+    <td>{{ stud.name }}</td>
+    <td>{{ stud.course }}</td>
+    <td>{{ stud.phonenum }}</td>
+    <td>{{ stud.feepaid }}</td>
+
+</tr>
 {% endfor %}
+</table>
 <img src="{% static 'images/admission.jpg' %}" alt="amission">
 {% endblock %}
