--- a/admission/templates/update_admission.html
+++ b/admission/templates/update_admission.html
@@ -4,6 +4,6 @@
 <form method="post">
     {% csrf_token %}
     {{ admissionform.as_p }} 
-<button type="submit">Submit</button>
+<button type="submit">Update</button>
 </form>
 {% endblock %}
