--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMS</title>
+    <link rel="stylesheet" href="{% static 'style/mystyle.css' %}">
     <style>
         h1{text-decoration: underline red dashed;}
     </style>
